--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 .container{
-    width: 90%;
+    width: 95%;
     margin: 0 auto;
     height: 100%;
 }
@@ -14,8 +14,9 @@
     display: flex;
 }
 .box{
-    background-color: rgb(255, 215, 105);
+    background-color: rgb(105, 224, 78);
     height: 100%;
-    
-    width: 100%;
+    padding: 0.5rem;
+    border: 2px solid black;
+    text-align: center;
 }
